--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,8 @@
             <img src="~/Images/fld_logo.png" />
             <div class="fr" style="font-size:12px">
                 <i class="icon iconfont">&#xe605;</i>
-                <span>当前用户：@Html.Action("CurrentUser", "Common")</span>&nbsp;&nbsp;
+                <span>
+                当前用户：@Html.Action("CurrentUser", "Common")</span>&nbsp;&nbsp;
                 <a style="cursor:pointer" href="/Account/SignOut"><i class="icon iconfont">&#xe609;</i><span>退出</span></a>
             </div>
         </div>
