--- a/Views/Common/Attachment_List.cshtml
+++ b/Views/Common/Attachment_List.cshtml
@@ -1,9 +1,9 @@
 ﻿<script type="text/javascript">
     // 查询条件  --单据号
     var search_code = [
-        { code: 'FWONO', name: 'FWO订单号', selected: true },
-        { code: 'FOONO', name: 'FOO指令服务号' },
-        { code: 'ORDERCODE', name: '业务单号' }
+        { code: 'ORDERCODE', name: '业务单号', selected: true },
+        { code: 'FWONO', name: 'FWO订单号'},
+        { code: 'FOONO', name: 'FOO指令服务号' }
 
     ];
     // 查询条件  --状态
@@ -59,11 +59,11 @@
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'ORDERCODE',width:150,sortable:true">业务单号</th>
-                    <th data-options="field:'FWONO',width:190,sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOONO',width:190,sortable:true">FOO指令服务号</th>                    
                     <th data-options="field:'FILENAME',width:390,sortable:true">文件名称</th>
                     <th data-options="field:'REALNAME',width:60,sortable:true">上传人</th>
                     <th data-options="field:'CREATETIME',width:140,sortable:true">上传时间</th>
+                    <th data-options="field:'FWONO',width:190,sortable:true">FWO订单号</th>
+                    <th data-options="field:'FOONO',width:190,sortable:true">FOO指令服务号</th>   
                 </tr>
             </thead>
         </table>
