--- a/Views/Declare/DomesticBlc_List.cshtml
+++ b/Views/Declare/DomesticBlc_List.cshtml
@@ -1,7 +1,8 @@
 ﻿<script type="text/javascript">
     //1 查询条件 --日期
     var search_condition_date = [
-        { code: 'GUANWUJIESHOUTIME', name: '关务接受日期', selected: true },
+        { code: 'CREATETIME', name: '上游下发日期', selected: true },
+        { code: 'GUANWUJIESHOUTIME', name: '关务接受日期' },
         { code: 'BAORUHAIGUANTIME', name: '报入海关日期' },
         { code: 'SHANDANKAISHITIME', name: '删单开始日期' },
         { code: 'SHANDANWANCHENGTIME', name: '删单完成日期' },
@@ -11,8 +12,7 @@
         { code: 'CHAYANSTARTTIME', name: '查验开始日期' },
         { code: 'CHAYANENDTIME', name: '查验完成日期' },
         { code: 'DANZHENGFANGXINGTIME', name: '单证放行日期' },
-        { code: 'SHIWUFANGXINGTIME', name: '实物放行日期' },
-        { code: 'CREATETIME', name: 'TM下发日期' }
+        { code: 'SHIWUFANGXINGTIME', name: '实物放行日期' }
     ];
     //2 查询条件  --单据号
     var search_code = [
@@ -44,30 +44,27 @@
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'CODE',width:100,sortable:true,">业务单号</th>
-                    <th data-options="field:'CREATETIME',width:130,sortable:true,">TM下发时间</th>
-                    <th data-options="field:'BUSIUNITNAME',width:200,sortable:true">进口企业</th>
-                    <th data-options="field:'BUSIUNITNAME',width:200,sortable:true">出口企业</th>
-                    <th data-options="field:'DECLARATIONCODE',width:100,sortable:true">报关单号</th>
-                    <th data-options="field:'DECLARATIONSTATUS',width:100,sortable:true">海关通关状态</th>
-                    <th data-options="field:'text',width:100">出口报关单号</th>
-                    <th data-options="field:'CONTRACTNO',width:100">发票合同号</th>
-                    <th data-options="field:'DECLWAY',width:70,formatter:formatDECLWAY">申报方式</th>
+                    <th data-options="field:'SGOODSUNIT',width:150,sortable:true">收货方</th>
+                    <th data-options="field:'FGOODSUNIT',width:150,sortable:true">发货方</th>
+                    <th data-options="field:'DECLARATIONCODE',width:150,sortable:true">报关单号</th>
+                    <th data-options="field:'DECLARATIONSTATUS',width:100">海关通关状态</th>
+                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:70">单证放行人</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME',width:70">实物放行人</th>
                 </tr>
             </thead>
             <thead>
                 <tr>
-                    <th data-options="field:'text',width:100">海关通关状态</th>
-                    <th data-options="field:'text',width:100">关务状态</th>
+                    <th data-options="field:'CREATETIME',width:130,sortable:true">上游下发日期</th>
+                    <th data-options="field:'DECLWAY',width:70,formatter:formatDECLWAY">申报方式</th>
                     <th data-options="field:'BUSITYPE',width:100,formatter:formatBUSITYPE">业务类型</th>
-                    <th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>
+                    @*<th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>*@
+                    <th data-options="field:'CONTRACTNO',width:100">发票合同号</th>
                     <th data-options="field:'GOODSNUM',width:100,sortable:true">件数</th>
                     <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">重量</th>
                     <th data-options="field:'GUANWUJIESHOUTIME',width:100,sortable:true">关务接受时间</th>
                     <th data-options="field:'BAORUHAIGUANTIME',width:100,sortable:true">报入海关时间</th>
                     <th data-options="field:'DANZHENGFANGXINGTIME',width:100,sortable:true">单证放行时间</th>
                     <th data-options="field:'SHIWUFANGXINGTIME',width:100,sortable:true">实物放行时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:100,sortable:true">单证放行人</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,sortable:true">实物放行人</th>
                     <th data-options="field:'ASSOCIATETRADEWAY',width:100,sortable:true">贸易方式</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
                     <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
@@ -117,14 +114,14 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="search_margin">
+                            @*<td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
                                     <option>转入类型</option>
                                 </select>
                             </td>
                             <td>
                                 <select class="easyui-combobox value" editable="false" id="out_in" style="width:130px" panelheight="auto" name="out_in"></select>
-                            </td>
+                            </td>*@
 
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
@@ -149,6 +146,23 @@
                             </td>
                             <td>
                                 <select class="easyui-combobox combobox_width value" editable="false" id="declaration_type" panelheight="auto" name="declaration_type"></select>
+                            </td>
+
+                            <td class="search_margin">
+                                <select class="easyui-combobox" panelheight="auto">
+                                    <option>是否放行</option>
+                                </select>
+                            </td>
+                            <td>
+                                <select class="easyui-combobox combobox_width value is_check" editable="false" name="IFFANGXING" panelheight="auto"></select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="company" panelheight="auto" name="company"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-textbox value placeholderclass" type="text" name="company_value" placeholder="单位名称" />
                             </td>
                         </tr>
                     </table>
