--- a/Views/Declare/OnelineOut_Edit.cshtml
+++ b/Views/Declare/OnelineOut_Edit.cshtml
@@ -220,6 +220,19 @@
                         <input class="" id="fajianbiaozhi" type="checkbox" name="LAWCONDITION" value="1" />
                     </td>*@
             </tr>
+
+
+            <tr>
+                <td style="text-align:left">
+                    <label for="IFLIHUO">理货标识:</label>
+                    <input class="" id="IFLIHUO" type="checkbox" name="IFLIHUO" value="1" />
+                </td>
+                <td>
+                    <label for="LIHUOTOTAL">理货次数:</label>
+                    <input class="easyui-numberspinner" name="LIHUOTOTAL"
+                           data-options="min:0">
+                </td>
+            </tr>
             <tr>
                 <td style="text-align:left">
                     <label for="IFSHANDAN">是否删单:</label>
