--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -14,18 +14,18 @@
 
     //2 查询条件  --单据号
     var search_code = [
-        { code: 'CODE', name: '业务编号', selected: true },
-        { code: 'FWONO', name: 'FWO订单号' },
+        { code: 'APPROVALCODE', name: '核准单号', selected: true },
+        { code: 'INSPECTIONCODE', name: '报检单号'},
+        { code: 'CODE', name: '业务编号'},
+        { code: 'FWONO', name: 'FWO号' },
         { code: 'FOONOBJ', name: 'FO号' },
-        { code: 'INSPECTIONCODE', name: '报检单号' },
         { code: 'DIVIDENO', name: '分单号' },
         { code: 'TOTALNO', name: '总单号' },
         //{ code: 'text', name: '万达号' },
         { code: 'MANIFEST', name: '载货清单号' },
-        { code: 'INSPECTIONCODE', name: '报检单号' },
         { code: 'FIRSTLADINGBILLNO', name: '一程提运单号' },
-        { code: 'SECONDLADINGBILLNO', name: '二程提运单号' },
-        { code: 'CLEARANCENO', name: '通关单号' }
+        { code: 'SECONDLADINGBILLNO', name: '二程提运单号' }
+        //{ code: 'CLEARANCENO', name: '通关单号' }
         //{ code: 'CONTAINERNO', name: '集装箱号' }
     ];
     $(function () {
@@ -50,17 +50,18 @@
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'CODE',width:100,sortable:true,">业务单号</th>
-                    <th data-options="field:'CREATETIME',width:130,sortable:true,">TM下发时间</th>
+                    @*<th data-options="field:'CREATETIME',width:130,sortable:true,">TM下发时间</th>*@
                     <th data-options="field:'FGOODSUNIT',width:200,sortable:true,">收货人</th>
-                    <th data-options="field:'CLEARANCENO',width:100">通关单号</th>
-                    <th data-options="field:'INSPECTIONCODE',width:150,sortable:true">报检单号</th>
-                    <th data-options="field:'INSPECTIONSTATUS',width:150,sortable:true">国检状态</th>
-                    <th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>
-                    <th data-options="field:'BUSITYPE',width:100,formatter:formatBUSITYPE">业务类型</th>
+                    <th data-options="field:'CLEARANCECODE',width:100">通关单号</th>
+                    <th data-options="field:'APPROVALCODE',width:160">核准单号</th>
+                    <th data-options="field:'INSPECTIONCODE',width:150">报检单号</th>
+                    <th data-options="field:'INSPECTIONSTATUS',width:150">国检状态</th>
                 </tr>
             </thead>
             <thead>
                 <tr>
+                    <th data-options="field:'BUSITYPE',width:100,formatter:formatBUSITYPE">业务类型</th>
+                    <th data-options="field:'INSPSTATUS',width:100">报检状态</th>
                     <th data-options="field:'GOODSNUM',width:100,sortable:true">总件数</th>
                     <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">总重量</th>
                     <th data-options="field:'TOTALNO',width:100,sortable:true">总单号</th>
@@ -138,21 +139,21 @@
                             <td>
                                 <select class="easyui-combobox combobox_width value is_check" editable="false" name="LAWCONDITION" panelheight="auto"></select>
                             </td>
-                            <td class="search_margin">
+                            @*<td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
                                     <option>木质包装</option>
                                 </select>
                             </td>
                             <td>
                                 <select class="easyui-combobox combobox_width value is_check" editable="false" name="WOODPACKINGID" panelheight="auto"></select>
-                            </td>
+                            </td>*@
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
                                     <option>通关单标志</option>
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value is_check" editable="false" name="text" panelheight="auto"></select>
+                                <select class="easyui-combobox combobox_width value is_check" editable="false" name="ISNEEDCLEARANCE" panelheight="auto"></select>
                             </td>
                         </tr>
                     </table>
