--- a/Views/Order/OrderList.cshtml
+++ b/Views/Order/OrderList.cshtml
@@ -81,28 +81,28 @@
             <thead >
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
-                    <th data-options="field:'ONLYCODE',width:130">唯一号</th>
+                    <th data-options="field:'FWONO',width:160">FWO号</th>
                     <th data-options="field:'CODE',width:100">业务单号</th>
                     <th data-options="field:'XCBUSINAME',width:100">业务类型</th>
-                    <th data-options="field:'DECLARATIONCODE',width:150">报关单号</th>
-                    <th data-options="field:'INSPECTIONCODE',width:150">报检单号</th>
                     <th data-options="field:'CREATETIME',width:130,sortable:true,">上游下发日期</th>
                     <th data-options="field:'UPDATETIME',width:130,sortable:true,">上游修改数据日期</th>
                     <th data-options="field:'SUBMITUSERNAME',width:80">下发人</th>
                     <th data-options="field:'IFSEND',width:100,formatter:formatISPRINT">是否发送到下游</th>
                     <th data-options="field:'SENDTIME',width:130,sortable:true,">发送下游日期</th>
                     <th data-options="field:'FILERELATE',width:100,formatter:formatISPRINT">是否关联文件</th>
-                    <th data-options="field:'FWONO',width:160">FWO号</th>
+                    <th data-options="field:'DECLARATIONCODE',width:150">报关单号</th>
+                    <th data-options="field:'APPROVALCODE',width:150">报检流水号</th>
+                    <th data-options="field:'INSPECTIONCODE',width:150">报检单号</th>
                     <th data-options="field:'FOONO',width:180">报关FOO</th>
                     <th data-options="field:'FOONOBJ',width:180">报检FOO</th>
-
-
+                    <th data-options="field:'ONLYCODE',width:130">唯一号</th>
                 </tr>
             </thead>
         </table>
         <div id="tb">
             <div class="tb_search">
                 <form id="searchform" method="post">
+                    <input type="hidden" name="BUSITYPE" value="OrderList" />
                     <table>
                         <tr>
                             <td class="search_margin">
@@ -174,11 +174,11 @@
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
-                                    <option>国检单号回传</option>
+                                    <option>流水号回传</option>
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value is_check" editable="false" panelheight="auto" name="INSPECTIONCODE"></select>
+                                <select class="easyui-combobox combobox_width value is_check" editable="false" panelheight="auto" name="APPROVALCODE"></select>
                             </td>
                         </tr>
                     </table>
@@ -186,8 +186,7 @@
             </div>
             <div class="tb_but">
                 <div class="but_left">
-                    @*<a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="refresh_form()"><i class="icon-refresh"></i> 批量更新</a>
-                        <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="export_form()"><i class="fa fa-share-square-o" aria-hidden="true"></i> 导出</a>*@
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="export_form()"><i class="fa fa-share-square-o" aria-hidden="true"></i> 导出</a>
                 </div>
                 <div class="but_right">
                     <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="search_form()"><i class="icon-search"></i> 搜索</a>
